# mcp-server

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  NEWS.md  README.md  justfile  license-header.tpl  mcp.default.json  mcp.unrestricted.json  pyproject.toml  requirements.txt
.github/composites/install/: action.yml
.github/workflows/: ci.yml  release.yml
src/: docs_handler.py  stacklet_auth.py
stacklet/mcp/: __init__.py  __main__.py  assetdb_redash.py  cmdline.py  docs_handler.py  lifespan.py  mcp.py  mcp_info.md  mcp_util.py  models.py  server.py  settings.py  stacklet_auth.py  stacklet_platform.py  stacklet_query.py  stacklet_schema.py  utils.py
stacklet/mcp/assetdb/: models.py  redash.py  sql_info.md  tools.py
stacklet/mcp/docs/: __init__.py  assetdb_info.md  client.py  graphql_info.md  models.py  tools.py
stacklet/mcp/platform/: __init__.py  dataset_info.md  graphql.py  graphql_info.md  models.py  tools.py
stacklet/mcp/utils/: error.py  file.py  json.py  mcp_json.py  text.py  tool.py
tests/: __init__.py  conftest.py  factory.py  mcp_test.py  test_cmdline.py  test_settings.py  test_stacklet_auth.py  test_tools_assetdb.py  test_tools_docs.py  test_tools_platform.py  test_utils.py  test_utils_mcp_json.py  test_utils_text.py
tests/testing/: http.py  mcp.py  settings.py
