[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacklet-mcp-server"
version = "0.1.0"
description = "A simple MCP server using FastMCP 2"
dependencies = [
    "fastmcp>=2.0.0",
    "graphql-core>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=4.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.0",
]

[project.scripts]
mcp = "stacklet.mcp.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["stacklet"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add `line-too-long` and isort to the enforced rule set.
extend-select = ["E501", "I"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
strict = true
install_types = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
non_interactive = true
exclude = ["tests/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
